@@ -106,6 +106,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
+          <configuration>
+            <release>13</release>
+            <compilerArgs>
+              <arg>--enable-preview</arg>
+            </compilerArgs>
+          </configuration>
       </plugin>
 
       <plugin>
@@ -114,6 +120,7 @@
         <version>2.22.2</version>
         <configuration>
           <skipTests>true</skipTests>
+          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
 
@@ -122,6 +129,7 @@
         <artifactId>jetty-maven-plugin</artifactId>
         <version>9.4.26.v20200117</version>
         <configuration>
+          <jvmArgs>--enable-preview</jvmArgs>
           <httpConnector>
             <port>80</port>
           </httpConnector>
